[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/container.png" type="Texture" id=1]
[ext_resource path="res://Objects/Obstacles/Container.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/WhiteCircle.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70, 120 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 20 )

[node name="WaterContainer" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="WaterLevel" type="ColorRect" parent="."]
margin_left = 57.0
margin_top = 90.0
margin_right = 176.0
margin_bottom = 240.0
rect_rotation = 179.0
color = Color( 0.0980392, 0.607843, 0.745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowWaterLevel" type="Sprite" parent="."]
modulate = Color( 0.113725, 0.694118, 0.847059, 1 )
position = Vector2( -0.105, 92 )
scale = Vector2( 0.229192, 0.0599954 )
texture = ExtResource( 3 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -4, -10 )
shape = SubResource( 1 )

[node name="Jar" type="Sprite" parent="."]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )

[node name="LidPlatform" type="StaticBody2D" parent="."]
visible = false
position = Vector2( -6.80949, -89.4258 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LidPlatform"]
shape = SubResource( 2 )

[node name="DrainTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_WaterContainer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WaterContainer_body_exited"]
[connection signal="timeout" from="DrainTimer" to="." method="_on_DrainTimer_timeout"]
